--- a/HotspotKit/Views/Manager.axaml
+++ b/HotspotKit/Views/Manager.axaml
@@ -3,15 +3,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:HotspotKit.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="250" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="300"
              x:Class="HotspotKit.Views.Manager"
              x:DataType="vm:ManagerViewModel">
-    <DockPanel Margin="10">
-        <TextBlock FontSize="32"
-                   HorizontalAlignment="Center"
-                   DockPanel.Dock="Top">
-            Hotspot Kit
-        </TextBlock>
+    <DockPanel>
         <Button DockPanel.Dock="Bottom"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
@@ -20,20 +15,19 @@
             <TextBlock Text="{Binding StartStopButtonText}"/>
         </Button>
         <Grid ColumnDefinitions="1*, 1*"
-              RowDefinitions="*, *"
-              Margin="0 20">
+              RowDefinitions="*, *, *">
             <TextBlock Grid.Column="0"
                        Grid.Row="0"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center">
-                WiFi Adapter
+                WiFi Source
             </TextBlock>
             <ComboBox Grid.Column="1"
                       Grid.Row="0"
                       HorizontalAlignment="Stretch"
                       VerticalAlignment="Center"
                       ItemsSource="{Binding Adapters}"
-                      SelectedIndex="{Binding AdapterIndex}">
+                      SelectedIndex="{Binding SourceIndex}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Name}" />
@@ -44,14 +38,36 @@
                        Grid.Row="1"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
+                       ToolTip.Tip="Requires admin and a reboot!">
+                WiFi Adapter
+            </TextBlock>
+            <ComboBox Grid.Column="1"
+                      Grid.Row="1"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Center"
+                      ItemsSource="{Binding Adapters}"
+                      SelectedIndex="{Binding AdapterIndex}"
+                      IsEnabled="{Binding IsAdministrator}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <TextBlock Grid.Column="0"
+                       Grid.Row="2"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
                        TextWrapping="Wrap"
-                       TextAlignment="Center">
-                Disable Auto Config (Requires Admin)
+                       TextAlignment="Center"
+                       ToolTip.Tip="Requires admin!">
+                Disable Auto Config
             </TextBlock>
             <CheckBox Grid.Column="1"
-                      Grid.Row="1"
+                      Grid.Row="2"
                       HorizontalAlignment="Center"
-                      IsChecked="{Binding DisableAutoConf}"/>
+                      IsChecked="{Binding DisableAutoConf}"
+                      IsEnabled="{Binding IsAdministrator}"/>
         </Grid>
     </DockPanel>
 </UserControl>
